--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "deploy:gh": "ng build --prod --base-href='https://mohammadmanzoor8972.github.io/memcorp/Guitar/' && ngh"
   },
   "private": true,
   "dependencies": {
@@ -22,6 +23,7 @@
     "@angular/platform-browser": "^6.0.2",
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/router": "^6.0.2",
+    "angular-cli-ghpages": "^0.5.2",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
