--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy:gh": "ng build --prod --base-href='https://mohammadmanzoor8972.github.io/memcorp/Guitar/' && ngh"
+    "deploy:gh": "ng build --prod --base-href=https://mohammadmanzoor8972.github.io/memcorp/Guitar/ && ngh"
   },
   "private": true,
   "dependencies": {
